@@ -42,8 +42,10 @@ static void sigu (int signum)
 {
 }
 
-#define DSIZE 2821120
-#define DSIZE 32768
+#define DSIZE 17318440
+//#define DSIZE 32768
+
+#include "lzf_c_slow.c"
 
 unsigned char data[DSIZE], data2[DSIZE*2], data3[DSIZE*2];
 
@@ -51,7 +53,7 @@ int main(void)
 {
    tval s;
    tval si[1000];
-   int i, l, j;
+   int i, j, k, l;
    int min = 1<<30;
    int lp;
    char buf[8192];
@@ -84,10 +86,14 @@ int main(void)
       //struct timeval tv; gettimeofday (&tv, 0);
       //void *x = mmap (0, 16384, PROT_READ|PROT_WRITE, MAP_ANONYMOUS|MAP_PRIVATE,-1,0);
 
-      l = lzf_compress (data, DSIZE, data2, DSIZE*2);
+      l = lzf_compress_slow (data, DSIZE, data2, DSIZE*2);
+      //for (k = 0; k < l; ++k)
+        //printf ("1 %2d: %02x\n", k, data2[k]);
       assert(l);
 
       j = lzf_decompress (data2, l, data3, DSIZE*2);
+      //for (k = 0; k < j; ++k)
+        //printf ("2 %2d: %02x\n", k, data3[k]);
       assert (j == DSIZE);
 
       si[0]=measure(s);
