@@ -187,16 +187,13 @@ typedef unsigned char u8;
 
 typedef LZF_HSLOT LZF_STATE[1 << (HLOG)];
 
-#if !STRICT_ALIGN
-/* for unaligned accesses we need a 16 bit datatype. */
-# if USHRT_MAX == 65535
-    typedef unsigned short u16;
-# elif UINT_MAX == 65535
-    typedef unsigned int u16;
-# else
-#  undef STRICT_ALIGN
-#  define STRICT_ALIGN 1
-# endif
+#if USHRT_MAX == 65535
+   typedef unsigned short u16;
+#elif UINT_MAX == 65535
+   typedef unsigned int u16;
+#else
+# undef STRICT_ALIGN
+# define STRICT_ALIGN 1
 #endif
 
 #if ULTRA_FAST
